--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matemática!!!</title>
 </head>
 <body>
-    
+ <header>ALURAFLIX</header>   
+ <section>
+    <h1> Melhores Vídeos sobre Matemática!!1 </h1>
+    <p>clacificação de Triangulos</p>
+    <div>
+
+</div>   
+</section>
 </body>
 </html>
